--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Reset CSS -->
+    <link rel="stylesheet" href="./assets/css/css/reset.css">
+
+    <!-- Style -->
+    <link rel="stylesheet" href="./assets/css/css/style.css">
+
+    
+
     <link rel="stylesheet" href="style.css">
     <title>Zohalo - Dự án 1</title>
 </head>
 <body>
-    
+    <h1>Figma to HTML</h1>
+    <p>Demo</p>
 </body>
 </html>
